WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134986
REGRESSION(
r171069
) 75% repro crash in WebCore::AudioHardwareListenerMac::processIsRunningChanged()
https://bugs.webkit.org/show_bug.cgi?id=134986
Summary
REGRESSION(r171069) 75% repro crash in WebCore::AudioHardwareListenerMac::pro...
Jer Noble
Reported
2014-07-16 11:12:34 PDT
REGRESSION(
r171069
) 75% repro crash in WebCore::AudioHardwareListenerMac::processIsRunningChanged()
Attachments
Patch
(2.88 KB, patch)
2014-07-16 11:17 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-07-16 11:13:23 PDT
<
rdar://problem/17685585
>
Jer Noble
Comment 2
2014-07-16 11:17:28 PDT
Created
attachment 235008
[details]
Patch
Eric Carlson
Comment 3
2014-07-16 11:25:53 PDT
Comment on
attachment 235008
[details]
Patch Thank you!
WebKit Commit Bot
Comment 4
2014-07-16 12:10:45 PDT
Comment on
attachment 235008
[details]
Patch Clearing flags on attachment: 235008 Committed
r171149
: <
http://trac.webkit.org/changeset/171149
>
WebKit Commit Bot
Comment 5
2014-07-16 12:10:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug